--- a/hobbies.html
+++ b/hobbies.html
@@ -1,8 +1,9 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>my hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>hobbies</h3>
