--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Abhinav's website</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -13,15 +14,15 @@
   <table cellspacing=20>
     <thead>
       <tr>
-      <th> <img src="https://c8.alamy.com/comp/DNMB2N/a-vector-illustration-of-a-boy-student-studying-and-reading-a-book-DNMB2N.jpg" height="300" alt="image of me">
-</th>
+        <th> <img src="https://c8.alamy.com/comp/DNMB2N/a-vector-illustration-of-a-boy-student-studying-and-reading-a-book-DNMB2N.jpg" height="300" alt="image of me">
+        </th>
 
         <th> <strong>Bonjour</strong> i am Abhinav a young <em>student</em> studying in class 10 who is currently<br>learning how to code.</th>
       </tr>
     </thead>
   </table>
 
-  <img src="images.jpeg" alt="image of the universe" />
+  <img src="images.jpeg" alt="image of the universe" class="universe">
   <hr>
   <h3>education</h3>
   <ul>
@@ -47,7 +48,8 @@
         <td>hillside school</td>
       </tr>
     </tbody>
-  </table><hr>
+  </table>
+  <hr>
   <h3>skills</h3>
   <table border="3" cellspacing=10>
     <tr>
@@ -58,21 +60,24 @@
       <td>coding</td>
       <td>⭐️⭐️</td>
     </tr>
-  </table><hr>
-<br />
+  </table>
+  <hr>
+  <br />
   <a href="contactme.html">contact details</a><br>
   <a href="hobbies.html">hobbies</a><br />
   <a href="#life">click here</a>
   <p>
-    A paragraph is a self-contained unit of a<br /> discourse in writing dealing with a particular point or idea.<br /> A paragraph consists of one or more sentences. Though not required by the <br />syntax of any language, paragraphs are usually an
-    expected part of formal writing, used to organize longer prose. Wikipedia
+  Currently i only know html and css but the next language i am going to tackle is probably bootstrap or javascript.
   </p>
   <p>
-    so what exactly is life about?is it something mysterious or something that is right in front of us but we dont value?
+    So,I truly hope you liked the website and i will continue to keep improving my skills and build world-class websites.
+
   </p>
   <h3><a name="life">so finally...</a></h3>
   <p>
-    so what is the use of all these links that you are seeing right now on your screen?
+  BYE for now and i hope we have a chance to interact again in the future through some website.<br />
+  Yours truly,<br />
+  Y.Abhinav
   </p>
 
 </body>
